refactor: board loading

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -139,5 +139,30 @@
   "Покупаем коробку Возвращения ради коробки",
   "Выбираем яхту Акулову",
   "Ищем капсулы для жетонов",
-  "Запускаем пиявок в болота"
+  "Запускаем пиявок в болота",
+  "Переносим срок окончания предзаказа",
+  "Отмечаем 30 февраля на календаре",
+  "Спрашиваем у Дейзи, как пройти в библиотеку",
+  "Встречаемся с Аквинной",
+  "Валяем дурака с Лео",
+  "Прячем автопровал в карман",
+  "Получаем ужас за чтение вслух",
+  "Громко читаем Некрономикон",
+  "Листаем Запретный Фолиант",
+  "Забываем фазу врагов третий раз подряд",
+  "Завариваем чай в мешке хаоса",
+  "Ждём, пока мистик пересчитает заряды",
+  "Уточняем, зачем Стелла положила в конверт автопровал",
+  "Учим Дюка давать лапу",
+  "Слушаем блюз Пита",
+  "Ищем сыщика в упыре",
+  "Ищем пропавший замысел Полуночных Масок",
+  "Возвращаемся в точку невозврата",
+  "Пытаемся удержать рассудок",
+  "Притворяемся что понимаем древние тексты",
+  "Кричим «нам не страшно» и убегаем",
+  "Убеждаем монстров в ошибочности суждений",
+  "Фоткаемся на фоне древнего",
+  "Cлушаем зов, но без уважения",
+  "Кушаем в Хемлок-Вейл"
 ]
