--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -28,7 +28,7 @@
   "Определяем связи между локациями",
   "Выходим на след шоггота",
   "Мешаем ложе сломать реальность",
-  "Кормим с рук гончих тиндала",
+  "Кормим с рук гончих Тиндала",
   "Ищем средоточение Н'кай",
   "Откачиваем воду из подвалов Иннсмута",
   "Учимся играть колыбельную для Азатота",
@@ -164,5 +164,6 @@
   "Убеждаем монстров в ошибочности суждений",
   "Фоткаемся на фоне древнего",
   "Cлушаем зов, но без уважения",
-  "Кушаем в Хемлок-Вейл"
+  "Кушаем в Хемлок-Вейл",
+  "Оставляем улику в Тиндале"
 ]
