fix: about translation

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -11,6 +11,8 @@
   "about.hallOfFame.hauke": "some AI-uncropped investigator images",
   "about.hallOfFame.felice": "investigator card scans",
 
+  "about.credits.arkhamCards.icons": "Eugene Sarnetsky",
+
   "board.help.pins.press": "Press on a calculation on the board screen to unpin it",
 
   "board.help.pins.longPress": "Long press on a calculation on the board screen to reveal chaos token for this calculation",
