--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -12,6 +12,8 @@
   "about.hallOfFame.hauke": "AI-увеличенные изображения сыщиков",
   "about.hallOfFame.felice": "Сканы карт сыщиков",
 
+  "about.credits.arkhamCards.icons": "Евгений Сарнетский",
+
   "app.outdated.title": "Приложение устарело",
   "app.outdated.text": "Не так, как древние, но пора бы обновиться",
 
