--- a/docs/updates/v2/v2.ru.md
+++ b/docs/updates/v2/v2.ru.md
@@ -6,12 +6,12 @@
 
 Например:
 
-1. Нажатие на 0 действий меняет число на 3 действия и обновляет использованные способности
+1. Нажатие на 0 действий меняет число на 3 и обновляет использованные способности
 2. Некоторые способности сыщиков, вроде Кальвина, когда измение здоровья или рассудка приводит к изменению характеристик
 
 ## Переработанные уведомления
 
-Вы видели чуть раньше на скринах новый дизайн. Теперь уведомления не мешают менять значения на планшете и выводятся сверху
+Теперь уведомления не мешают менять значения на планшете и выводятся сверху
 
 Персональные уведомления выводятся с картинкой
 
@@ -21,7 +21,7 @@
 
 ## Модификация жетонов
 
-Можно изменять значения любых жетонов:
+Можно изменять значения любых жетонов, включая:
 
 1. Кёрсов и блессов
 2. Числовых жетонов (например, для карты «Игра наверняка»). Значение меняется только на время вытягивания и только на конкретный жетон (вроде, постоянные изменения числовых пока не нужны)
