docs: translation / changelog

--- a/docs/changelog/v2/v2.ru.md
+++ b/docs/changelog/v2/v2.ru.md
@@ -53,9 +53,18 @@
 
 После первой успешной загрузки приложения можно можно пользоваться планештом без доступа к интернету: все картинки и данные будут на устройстве
 
-## Оптимизация скорости
+## Оптимизация производительности
 
-Чтобы ничего не тормозило, из исходной картинки вырезается фрагмент так, чтобы заполнить экран и поместить лицо сыщика в середину видимой области. Процедура требует времени, поэтому пока вы ждёте, можно увидеть 1-3 жизненные фразы из игры
+### Изображения
+
+Чтобы ничего не тормозило, из исходной картинки вырезается фрагмент так, чтобы заполнить экран и поместить лицо сыщика в середину видимой области. Процедура требует времени, поэтому пока вы ждёте, можно увидеть несколько жизненных фразы из игры
+
+### Интерфейс
+
+Для плавной работы бюджетных и старых Android устройств можно:
+
+1. Отключить анимацию переходов со страницы на страницу
+2. Выключить анимацию прокрутки счётчиков
 
 ## Edge to Edge
 
