docs: added changelog info

--- a/docs/changelog/v2/v2.ru.md
+++ b/docs/changelog/v2/v2.ru.md
@@ -57,7 +57,7 @@
 
 ### Изображения
 
-Чтобы ничего не тормозило, из исходной картинки вырезается фрагмент так, чтобы заполнить экран и поместить лицо сыщика в середину видимой области. Процедура требует времени, поэтому пока вы ждёте, можно увидеть несколько жизненных фразы из игры
+Чтобы ничего не тормозило, из исходной картинки вырезается фрагмент так, чтобы заполнить экран и поместить лицо сыщика в середину видимой области. Процедура требует времени, поэтому пока вы ждёте, можно увидеть несколько жизненных фраз из игры
 
 ### Интерфейс
 
@@ -70,7 +70,7 @@
 
 То, что будет по умолчанию в Android 16: цветной фон системных кнопок (3 штуки снизу) теперь прозрачный и требует внимания разработчиков, чтобы всё отображалось корректно
 
-Ничего полезного режим не добавляет, но если его не внедрить, обладатели 16 Андроида могут столкнуться с трудностями вроде: почему фон сливается со светлой фотографией?
+Ничего полезного режим не добавляет, но если его не внедрить, обладатели 16 Андроида могут столкнуться с трудностями вроде: почему кнопки навигации сливаются со светлой фотографией?
 
 ## Динамическая смена цвета навигационного меню
 
@@ -80,3 +80,10 @@
 
 Можно включить звук прокрутки значений. Чем-то похож на то, как звучит магнитный счётчик на деревянных планшетах. Тем приятнее, что на все изменения счётчиков срабатывает виброотклик
 
+## Общие изменения в интрефейсе
+
+- Синхронизация улик выведена на главный экран. Напомню, это режим, при котором трата улики сыщика сразу добавляется на сценарий
+- При игре в несколько рук, между сыщиками можно переключаться свайпами вправо/влево, прямо как в Tinder. С кем из них вы сегодня пойдёте на свидание?
+- Теперь свайпы влево/вправо увеличивают/уменьшают базовое значение здоровья/рассудка/действий/ресурсов в фазу передышки (если включены). У опции есть ограничения, особенно для случаев, когда: 
+  - элементы находятся на краю экрана и нужно делать свайп в край
+  - включена анимация счётчиков (её можно выключить в настройках)
