feat: loading ru phrases

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -189,5 +189,8 @@
 	"Выясняем, зачем Йорик закопал лопату",
 	"Выясняем, зачем Стелла разносит письма в Каркозу",
 	"Пишем продолжение Гарри Поттера вместе с Глорией",
-	"Выясняем, почему Калвин кричит «ужас-ужас-ужас»"
+	"Выясняем, почему Калвин кричит «ужас-ужас-ужас»",
+	"Выкидываем из мешка лишние жетоны",
+	"Старательно путаем автопровал со знаком Древних",
+	"Рисуем комиксы вместе с Зефиной"
 ]
