fix: loading facts

--- a/assets/i18n/loading/en.json
+++ b/assets/i18n/loading/en.json
@@ -1,132 +1,132 @@
 [
-  "Placing doom on Monday",
-  "Checking if enemies can be ignored when they fear the vacuum cleaner",
-  "Studying the Taboo list",
-  "Upgrading the deck",
-  "Building the deck",
-  "Evading an Alert enemy. Alert enemy attacks",
-  "Jenny Barnes is the best investigator",
-  "Checking doom",
-  "Looking for clues",
-  "Waiting for the Rogue to finish the turn",
-  "Failing a test",
-  "Pulling auto-fail three times in a row",
-  "Summoning a shoggoth in the kitchen",
-  "Looking for doom in the fridge",
-  "Shuffling the chaos bag with potato chips",
-  "Drawing Surge from Surge",
-  "Counting how many resources Preston can lend us",
-  "Flipping cards",
-  "Moving Hunter enemies",
-  "Venturing too far",
-  "Sleeving cards",
-  "Taking trauma",
-  "Using allies as shields",
-  "Discovering extra clues",
-  "Pulling the 10th curse/bless token in one test",
-  "Connecting the locations",
-  "Following the trail of the shoggoth",
-  "Stopping the Lodge from breaking reality",
-  "Hand-feeding the Hounds of Tindalos",
-  "Searching for the nexus of N’kai",
-  "Pumping water out of Innsmouth basements",
-  "Learning to play a lullaby for Azathoth",
-  "Trying to tear the Pallid Mask off a mannequin",
-  "Asking Agnes to bring the menu",
-  "Joining an expedition with Leo and Ursula",
-  "Telling Carolyn about our childhood",
-  "Confessing to Father Mateo",
-  "Tucking Calvin Wright in with a blanket",
-  "Adding Kukri and Trench Knife to the deck",
-  "Spilling tea on the game board",
-  "Playing in the Core Set era",
-  "Playing 'Get over here!' on an enemy we’re already engaged with",
-  "Drawing Ancient Evils off of 'Delve Too Deep' in the final round",
-  "Draw the good tokens, not the bad ones",
-  "Detoxing from Magic: the Gathering",
-  "Wuk! Wuk!",
-  "Trying to save Kensler",
-  "Feeding Umôrdhoth",
-  "Walking the horses",
-  "Causing a ruckus",
-  "Looking for card draw in yellow",
-  "Drawing two extra cards for Winnie",
-  "Canceling Duke’s response",
-  "Arguing about rotation",
-  "Laying down tracks in Dunwich",
-  "Searching for the library entrance",
-  "Being certain in doubt, doubting certainty",
-  "Traveling through space",
-  "Rescuing students",
-  "Riding dogs through the asylum",
-  "Reading the Necronomicon",
-  "Translating R’lyehian",
-  "Blowing up the temple",
-  "Building ancient ruins and resettling snakes",
-  "Setting traps in the jungle",
-  "Placing clues in the library",
-  "Looking for the Unseen and the Unnamable",
-  "Asking Doom to wait",
-  "Paying Charon with an obol",
-  "Juggling chainsaws",
-  "Building the best decks with grey skills",
-  "Spreading mist into Carcosa",
-  "Sending nightmares at investigators",
-  "Throwing a party for the premiere of 'The King in Yellow'",
-  "Fastening the stage curtain",
-  "Jumping off the balcony",
-  "Hiding a door in the office",
-  "Handing out masks to investigators",
-  "Brewing decks",
-  "Going too far",
-  "Going to the casino with Rex",
-  "Fishing with Dagon",
-  "Pulling out the ziplocks",
-  "Riding the moon-beasts of Ngranek",
-  "Pitting the Outer Gods against each other",
-  "Releasing crocodiles into the swamps",
-  "Getting ready for the carnival",
-  "Turning the chaos counter",
-  "Recording traumas",
-  "Importing sand to Egypt",
-  "Planning a murder in a hotel",
-  "Teaching the Blob to absorb everything",
-  "Putting the investigators to sleep",
-  "Preparing the chaos bag",
-  "Mulliganing cards in secret",
-  "Negotiating with an Elite enemy",
-  "Helping Daisy carry books home",
-  "Going to Zoey’s Sunday dinner",
-  "Taking acting lessons from Lola",
-  "Telling Carolyn about our nightmares",
-  "Escaping with Wendy through the fire escape",
-  "Asking Preston to pay for everyone’s dinner",
-  "Playing poker with Skids",
-  "Walking with Duke in the park",
-  "Asking Mark not to call it a 'scratch'",
-  "Listening to Ursula’s stories about lost temples",
-  "Checking if Rex left his clues at the bar",
-  "Arguing with Minh about the rules",
-  "Asking Roland where he hid the clues",
-  "Asking Stella to deliver the mail on time",
-  "Cracking a case with Joe",
-  "Asking Tony not to bring work on a date",
-  "Rewriting a ritual with Jacqueline",
-  "Helping Akachi finish an amulet",
-  "Waiting for Silas to come back from fishing",
-  "Watching Dexter’s magic tricks",
-  "Visiting Sefina’s art exhibition",
-  "Convincing Zoey not to bring a knife to church",
-  "Asking Wendy to make breakfast out of nothing",
-  "Listening to Gloria’s weather forecast",
-  "Asking Amanda to do homework for everyone",
-  "Waiting for Lily to finish her morning training",
-  "Asking Darrell to take a photo 'without tentacles in the frame'",
-  "Arguing with Carson about who does the dishes",
-  "Waiting for Calvin to pull himself together again",
-  "Buying a shovel for Yorick",
-  "Getting a medical note from Vincent",
-  "Catching up with Rita",
-  "Asking Bob for a 'friends and family' discount",
-  "Celebrating the success of 'The King in Yellow'"
+	"Placing doom on Monday",
+	"Checking if enemies can be ignored when they fear the vacuum cleaner",
+	"Studying the Taboo list",
+	"Upgrading the deck",
+	"Building the deck",
+	"Evading an Alert enemy. Alert enemy attacks",
+	"Jenny Barnes is the best investigator",
+	"Checking doom",
+	"Looking for clues",
+	"Waiting for the Rogue to finish the turn",
+	"Failing a test",
+	"Pulling auto-fail three times in a row",
+	"Summoning a shoggoth in the kitchen",
+	"Looking for doom in the fridge",
+	"Shuffling the chaos bag with potato chips",
+	"Drawing Surge from Surge",
+	"Counting how many resources Preston can lend us",
+	"Flipping cards",
+	"Moving Hunter enemies",
+	"Venturing too far",
+	"Sleeving cards",
+	"Taking trauma",
+	"Using allies as shields",
+	"Discovering extra clues",
+	"Pulling the 10th curse/bless token in one test",
+	"Connecting the locations",
+	"Following the trail of the shoggoth",
+	"Stopping the Lodge from breaking reality",
+	"Hand-feeding the Hounds of Tindalos",
+	"Searching for the nexus of N’kai",
+	"Pumping water out of Innsmouth basements",
+	"Learning to play a lullaby for Azathoth",
+	"Trying to tear the Pallid Mask off a mannequin",
+	"Asking Agnes to bring the menu",
+	"Joining an expedition with Leo and Ursula",
+	"Telling Carolyn about our childhood",
+	"Confessing to Father Mateo",
+	"Tucking Calvin Wright in with a blanket",
+	"Adding Kukri and Trench Knife to the deck",
+	"Spilling tea on the game board",
+	"Playing in the Core Set era",
+	"Playing 'Get over here!' on an enemy we’re already engaged with",
+	"Drawing Ancient Evils off of 'Delve Too Deep' in the final round",
+	"Draw the good tokens, not the bad ones",
+	"Detoxing from Magic: the Gathering",
+	"Wuk! Wuk!",
+	"Trying to save Kensler",
+	"Feeding Umôrdhoth",
+	"Walking the horses",
+	"Causing a ruckus",
+	"Looking for card draw in yellow",
+	"Drawing two extra cards for Winnie",
+	"Canceling Duke’s response",
+	"Arguing about rotation",
+	"Laying down tracks in Dunwich",
+	"Searching for the library entrance",
+	"Being certain in doubt, doubting certainty",
+	"Traveling through space",
+	"Rescuing students",
+	"Riding dogs through the asylum",
+	"Reading the Necronomicon",
+	"Translating R’lyehian",
+	"Blowing up the temple",
+	"Building ancient ruins and resettling snakes",
+	"Setting traps in the jungle",
+	"Placing clues in the library",
+	"Looking for the Unseen and the Unnamable",
+	"Asking Doom to wait",
+	"Paying Charon with an obol",
+	"Juggling chainsaws",
+	"Building the best decks with grey skills",
+	"Spreading mist into Carcosa",
+	"Sending nightmares at investigators",
+	"Throwing a party for the premiere of 'The King in Yellow'",
+	"Fastening the stage curtain",
+	"Jumping off the balcony",
+	"Hiding a door in the office",
+	"Handing out masks to investigators",
+	"Brewing decks",
+	"Going too far",
+	"Going to the casino with Rex",
+	"Fishing with Dagon",
+	"Pulling out the ziplocks",
+	"Riding the moon-beasts of Ngranek",
+	"Pitting the Outer Gods against each other",
+	"Releasing crocodiles into the swamps",
+	"Getting ready for the carnival",
+	"Turning the chaos counter",
+	"Recording traumas",
+	"Importing sand to Egypt",
+	"Planning a murder in a hotel",
+	"Teaching the Blob to absorb everything",
+	"Putting the investigators to sleep",
+	"Preparing the chaos bag",
+	"Mulliganing cards in secret",
+	"Negotiating with an Elite enemy",
+	"Helping Daisy carry books home",
+	"Going to Zoey’s Sunday dinner",
+	"Taking acting lessons from Lola",
+	"Telling Carolyn about our nightmares",
+	"Escaping with Wendy through the fire escape",
+	"Asking Preston to pay for everyone’s dinner",
+	"Playing poker with Skids",
+	"Walking with Duke in the park",
+	"Asking Mark not to call it a 'scratch'",
+	"Listening to Ursula’s stories about lost temples",
+	"Checking if Rex left his clues at the bar",
+	"Arguing with Minh about the rules",
+	"Asking Roland where he hid the clues",
+	"Asking Stella to deliver the mail on time",
+	"Cracking a case with Joe",
+	"Asking Tony not to bring work on a date",
+	"Rewriting a ritual with Gloria",
+	"Helping Akachi finish an amulet",
+	"Waiting for Silas to come back from fishing",
+	"Watching Dexter’s magic tricks",
+	"Visiting Sefina’s art exhibition",
+	"Convincing Zoey not to bring a knife to church",
+	"Asking Wendy to make breakfast out of nothing",
+	"Listening to Jaqueline’s weather forecast",
+	"Asking Amanda to do homework for everyone",
+	"Waiting for Lily to finish her morning training",
+	"Asking Darrell to take a photo 'without tentacles in the frame'",
+	"Arguing with Carson about who does the dishes",
+	"Waiting for Calvin to pull himself together again",
+	"Buying a shovel for Yorick",
+	"Getting a medical note from Vincent",
+	"Catching up with Rita",
+	"Asking Bob for a 'friends and family' discount",
+	"Celebrating the success of 'The King in Yellow'"
 ]
