--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -116,7 +116,7 @@
 	"Просим Стеллу разнести почту вовремя",
 	"Раскрываем дело с Джо",
 	"Просим Тони не приносить работу на свидание",
-	"Переписываем ритуал вместе с Жаклин",
+	"Переписываем ритуал вместе с Глорией",
 	"Помогаем Акачи доделать амулет",
 	"Ждём, пока Сайлас вернётся с рыбалки",
 	"Смотрим на фокусы Декстера",
