feat: loading phrases ru

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -192,5 +192,30 @@
   "Выкидываем из мешка лишние жетоны",
   "Старательно путаем автопровал со знаком Древних",
   "Рисуем комиксы вместе с Зефиной",
-  "Переписываем Некрономикон вместе с Глорией"
+  "Переписываем Некрономикон вместе с Глорией",
+  "Ждём фазу мифа с Глорией",
+  "Отбираем нож у Кальвина чтобы подарить Зои",
+  "Не знаем что делать за Карсона",
+  "Жддём автопровал с Матео",
+  "Делаем ставки на автопровал",
+  "Переживаем десять ран",
+  "Произносим его имя снова",
+  "Переигрываем сценарий",
+  "Спорим из-за альбомов для карт",
+  "Убираем за Дюком",
+  "Переодеваем протекторы",
+  "Выкладываем 10-ого союзника Чарли",
+  "Обдумываем тринадцатое действие",
+  "Ищем незапертые двери",
+  "Набираем сто ресурсов за Престона",
+  "Выбираем ультиматум",
+  "Идём на Подпольный рынок",
+  "Даём огнемёт Чо",
+  "Страдаем за Лучшего Сыщика",
+  "Разбазариваем Неприкосновенный запас",
+  "Составляем колоду после вступления",
+  "Ходим Приспешником",
+  "Перемещаем врагов по кругу",
+  "Начинаем игру впятером",
+  "Берём пятнадцатую карту за Харви"
 ]
