feat: ru loading texts

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -196,7 +196,7 @@
   "Ждём фазу мифа с Глорией",
   "Отбираем нож у Кальвина чтобы подарить Зои",
   "Не знаем что делать за Карсона",
-  "Жддём автопровал с Матео",
+  "Ждём автопровал с Матео",
   "Делаем ставки на автопровал",
   "Переживаем десять ран",
   "Произносим его имя снова",
@@ -217,5 +217,11 @@
   "Ходим Приспешником",
   "Перемещаем врагов по кругу",
   "Начинаем игру впятером",
-  "Берём пятнадцатую карту за Харви"
+  "Берём пятнадцатую карту за Харви",
+  "Следим за Дюком, чтобы он не съел улики",
+  "Достаём улики из Азатота",
+  "Делаем ставки на бои древних",
+  "Пытаем культистов",
+  "Пытаемся отличить жителей Инсмута",
+  "Пишем шпоры для Аманды"
 ]
