feat: ru loading texts

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -223,5 +223,15 @@
   "Делаем ставки на бои древних",
   "Пытаем культистов",
   "Пытаемся отличить жителей Инсмута",
-  "Пишем шпоры для Аманды"
+  "Пишем шпоры для Аманды",
+  "Пытаемся оплатить проезд Йог-Сототу",
+  "Убеждаем упырей вытирать ноги перед входом в кабинет",
+  "Выясняем, какая крыса сдала нас с потрохами",
+  "Учимся выживать вместе со Стеллой",
+  "Кормим кота, чтобы он не позвал Древних",
+  "Ищем идеальный органайзер для жетонов",
+  "Вызываем Йог-Сотота, чтобы спросить дорогу",
+  "Жалуемся на шумных соседей из другого измерения",
+  "Пытаемся зарегистрировать Ньярлатхотепа как индивидуального предпринимателя",
+  "Заказываем доставку пиццы с ананасами в Р'льех"
 ]
