feat: ru loading

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -233,5 +233,17 @@
   "Вызываем Йог-Сотота, чтобы спросить дорогу",
   "Жалуемся на шумных соседей из другого измерения",
   "Пытаемся зарегистрировать Ньярлатхотепа как индивидуального предпринимателя",
-  "Заказываем доставку пиццы с ананасами в Р'льех"
+  "Заказываем доставку пиццы с ананасами в Р'льех",
+  "Перемешиваем колоду реальности",
+  "Калибруем мешок хаоса. Не волнуйтесь, «-8» на месте",
+  "Фаза Мифа близко. Очень близко",
+  "Замешиваем контакты в колоду игрока",
+  "Зажигаем последнюю спичку",
+  "Перепроверяю карманы на наличие улик и остатков рассудка",
+  "Этот звук был просто ветер. Точно ветер. Почти уверен",
+  "Заколачиваем окна. Это не поможет, но так спокойнее",
+  "Получаем один жалкий ресурс. Тратим его на кофе",
+  "Покупаем пылесос для улик",
+  "Слушаем пластинку Джима Кальвера. Кажется, его музыка вызывает дождь из лягушек",
+  "Заказываем такси в Р'льех"
 ]
