--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -131,7 +131,7 @@
   "investigator.getResources_few": "{{name}} получает {{count}} ресурса",
   "investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
 
-  "wild.give": "{{name}} добавляет карте {{dativeName}} дополнительный [wild] до конца проверки",
+  "wild.give": "{{fromName}} добавляет карте {{dativeName}} дополнительный [wild] до конца проверки",
   "wild.give.self": "{{name}} добавляет своей карте дополнительный [wild] до конца проверки",
 
   "actions.get_one": "{{name}} получает {{count}} действие",
