feat: sponsors section

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -319,5 +319,6 @@
   "Testing/Ideas": "Testing/Ideas",
   "Special Thanks": "Special Thanks",
   "Application Info": "Application Info",
-  "Device Info": "Device Info"
+  "Device Info": "Device Info",
+  "Sponsors": "Sponsors"
 }
