--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -342,5 +342,6 @@
   "Special Thanks": "Особая благодарность",
   "Application Info": "О приложении",
   "Build Version": "Версия",
-  "Device Info": "Об устройстве"
+  "Device Info": "Об устройстве",
+  "Sponsors": "Спонсоры"
 }
