feat: ru phrases

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -245,5 +245,23 @@
   "Получаем один жалкий ресурс. Тратим его на кофе",
   "Покупаем пылесос для улик",
   "Слушаем пластинку Джима Кальвера. Кажется, его музыка вызывает дождь из лягушек",
-  "Заказываем такси в Р'льех"
+  "Заказываем такси в Р'льех",
+  "Притворяемся, что автопровала не существует",
+  "Составляем расписание апокалипсиса",
+  "Выясняем, что делают Пит и Престон в одной команде",
+  "Отдаём автопровал культистам",
+  "Лопата спасёт мир. Уильям Йорик",
+  "Миф — это стиль жизни. Глория Голдберг",
+  "Что нас не убивает, делает нас сильнее. Кальвин Райт",
+  "Пристраиваем Амину в техподдержку приложения",
+  "Отправляем Зои на божий промысел",
+  "Ставим ставки на бой комбатантов",
+  "Пересчитываем скопления",
+  "Отбираем карты у скоплений",
+  "Покупаем рыбу у Дагона",
+  "Отвозим пингвинов в зоопарк",
+  "Мечтаем о жизни без «-8»",
+  "Затягиваем пояса",
+  "Убеждаем блогеров начать кампанию заново",
+  "Убеждаем, что капля поглотила нашу работу"
 ]
