feat: ru rangers loading

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -263,5 +263,11 @@
   "Мечтаем о жизни без «-8»",
   "Затягиваем пояса",
   "Убеждаем блогеров начать кампанию заново",
-  "Убеждаем, что капля поглотила нашу работу"
+  "Убеждаем, что капля поглотила нашу работу",
+  "Ищем улики в кустах черники",
+  "Уговариваем оленя пройти проверку на волю",
+  "Проверяем, кто украл ресурсы у енота",
+  "Прячем Древнее Зло под карточку «Солнечный денёк»",
+  "Убеждаем бьякхи стать вегетарианцем",
+  "Выясняем, о каких грязеедах говорит Жаклин"
 ]
