fix: ru loading text

--- a/assets/i18n/loading/ru.json
+++ b/assets/i18n/loading/ru.json
@@ -266,7 +266,7 @@
   "Убеждаем, что капля поглотила нашу работу",
   "Ищем улики в кустах черники",
   "Уговариваем оленя пройти проверку на волю",
-  "Проверяем, кто украл ресурсы у енота",
+  "Выясняем, кто украл ресурсы у енота",
   "Прячем Древнее Зло под карточку «Солнечный денёк»",
   "Убеждаем бьякхи стать вегетарианцем",
   "Выясняем, о каких грязеедах говорит Жаклин"
